changes issue key with to min-width to prevent word wrap

--- a/app/assets/stylesheets/issues.css.scss
+++ b/app/assets/stylesheets/issues.css.scss
@@ -82,7 +82,7 @@
 
       .issue-key {
         display: inline-block;
-        width: 60px;
+        min-width: 60px;
       }
 
       .issue-closed, .issue-done, .issue-invalid {
